--- a/cards.css
+++ b/cards.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-    background-image: url('bg.jpg');
+    background-image: url("https://lh3.googleusercontent.com/proxy/2ipuP9AcLX9oCfwyer2uwBr7S1xAoqKlmnQvspKuZXU_Us_EJrNBYDAmnELPYrWig1XKD2vBzD5_Ycl9Fu0uuZvUNcYEzxDPez0tMY_ejElJA69vSE6fEZfjA6s");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
