--- a/karta/cards.css
+++ b/karta/cards.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-    background-image: url("https://lh3.googleusercontent.com/proxy/2ipuP9AcLX9oCfwyer2uwBr7S1xAoqKlmnQvspKuZXU_Us_EJrNBYDAmnELPYrWig1XKD2vBzD5_Ycl9Fu0uuZvUNcYEzxDPez0tMY_ejElJA69vSE6fEZfjA6s");
+    background-image: url("images/bg.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -160,3 +160,12 @@ margin-left: 50px;
     color: black;
 }
 
+.aa{
+    width: 100%;
+    height: 30px;
+    text-decoration: none;
+    background: indigo;
+    color: wheat;
+    text-align: center;
+    font-size: 20px;
+}
