--- a/karta/cards.css
+++ b/karta/cards.css
@@ -17,6 +17,8 @@ html {
     }
 }
 
+
+
 body {
     background-image: url("images/bg.jpg");
     background-position: center;
@@ -168,4 +170,23 @@ margin-left: 50px;
     color: wheat;
     text-align: center;
     font-size: 20px;
+}
+
+login-form{
+    display: flex;
+    flex-direction: column;
+    font-family: roboto;
+}
+
+.login-form input[type="submit"]{
+    background: black;
+    color: white;
+    width:100%;
+    padding: 10px;
+    border: none;
+}
+
+.login-form input[type="text"], .login-form input[type="password"]{
+    margin-bottom: 10px;
+    padding: 5px;
 }
