--- a/karta/log.css
+++ b/karta/log.css
@@ -6,11 +6,13 @@ body{
     margin:0;
     padding: 0;
     height: 100vh;
+   
 }
 
 .logowanie{
     display: flex;
     flex-direction: column;
+    
 }
 
 .logowanie input[type="submit"]{
@@ -24,4 +26,9 @@ body{
 .logowanie input[type="text"], .logowanie input[type="password"]{
     margin-bottom: 10px;
     padding: 5px;
+}
+p{
+    color: wheat;
+    border: solid 3px darkorchid;
+    background-color: tomato;
 }
