--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ left-side{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     padding: 10px;
     margin: 20px;
     
